<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup"

    >

    <LinearLayout
        android:layout_width="459dp"
        android:layout_height="831dp"
        android:background="@drawable/login_page"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_signup_title"
            android:textColor="#ffffff"
            android:textSize="50sp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/activity_signup_describe"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_signup_enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_overlay"
            android:textColorHint="#aaa" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_signup_enter_passwd"
            android:inputType="textPassword"
            android:textColor="@color/black_overlay"
            android:textColorHint="#aaa" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fn"
            android:inputType="textPersonName"
            android:textColor="@color/black_overlay"
            android:textColorHint="#aaa" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ln"
            android:inputType="textPersonName"
            android:textColor="@color/black_overlay"
            android:textColorHint="#aaa" />

        <Button
            android:id="@+id/button"
            android:layout_width="316dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/activity_signup_button"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>