<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004e90"

    tools:context=".doctor_information">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="8"
        android:background="@android:color/white"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:autoLink="none"
            android:gravity="center"
            android:text="@string/activity_doctor_information_title"
            android:textSize="22sp"
            android:textColor="@color/colorHint"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0"
                android:text="@string/activity_doctor_information_doctor_name"
                android:textColor="@color/colorHint"
                />


            <EditText
                android:id="@+id/dname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/activity_doctor_information_doctor_edit_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorHint"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0"
                android:text="@string/activity_doctor_information_doctor_email"
                android:textColor="@color/colorHint"
                />


            <EditText
                android:id="@+id/demail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/activity_doctor_information_doctor_edit_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorHint"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0"
                android:text="@string/activity_doctor_information_doctor_phone"
                android:textColor="@color/colorHint"
                />

            <EditText
                android:id="@+id/dphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/activity_doctor_information_doctor_edit_phone"
                android:inputType="phone"
                android:textColor="@color/colorHint"
                />
        </LinearLayout>

        <Button
            android:id="@+id/set_major_doc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="0.5"
            android:text="@string/activity_doctor_information_button_set"
            android:background="@android:color/transparent"
            android:textColor="@color/colorHint"
            />

        <Button
            android:id="@+id/add_doc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="0.5"
            android:text="@string/activity_doctor_information_button_add"
            android:background="@android:color/transparent"
            android:textColor="@color/colorHint"
            />

        <Button
            android:id="@+id/update_doc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="0.5"
            android:text="@string/activity_doctor_information_button_update"
            android:background="@android:color/transparent"
            android:textColor="@color/colorHint"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>