<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHint"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <ListView
                android:id="@+id/list_pa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.25"
                android:background="@android:color/white"
                >

            </ListView>

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@android:color/white"
                    >

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text="@string/mental_activity_fragment_intro"
                        android:textSize="24sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/physical_activity_fragment_ac1"
                        android:textSize="20sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text=""
                        android:textSize="18sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/physical_activity_fragment_ac2"
                        android:textSize="20sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text=""
                        android:textSize="18sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/physical_activity_fragment_ac3"
                        android:textSize="20sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:text="@string/physical_activity_fragment_ac3_d"
                        android:textSize="18sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/physical_activity_fragment_ac4"
                        android:textSize="20sp"
                        android:textColor="@android:color/darker_gray"
                        />

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/physical_activity_fragment_ac4_d"
                        android:textSize="18sp"
                        android:textColor="@android:color/darker_gray"
                        />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pa_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            app:backgroundTint="#FFFFFF"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/recurring_add" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>