<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/Logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.25"
                android:orientation="vertical"
                android:weightSum="2">

                <EditText
                    android:id="@+id/u_name"
                    android:layout_width="350dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:autofillHints=""
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textColorHint="#ffffffff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/pass_wd"
                    android:layout_width="350dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="36dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/password"
                    android:inputType="text"
                    android:layout_marginEnd="36dp"
                    android:padding="5dip"
                    android:singleLine="true"
                    android:textColorHint="@android:color/white"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="250dp"
                    android:layout_marginBottom="17dp"
                    android:layout_weight="1"
                    android:shadowColor="@android:color/black"
                    android:text="@string/remember_me" />

                <Button
                    android:id="@+id/Login_Button"
                    android:layout_width="303dp"
                    android:layout_height="49dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/login" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>